[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/game/entities/player/states/DeadState.gd" type="Script" id=1]
[ext_resource path="res://src/game/entities/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/player/player_idle.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/player/player_idle_body_color.png" type="Texture" id=4]
[ext_resource path="res://src/game/entities/player/states/JumpState.gd" type="Script" id=5]
[ext_resource path="res://src/game/entities/player/states/IdleState.gd" type="Script" id=6]
[ext_resource path="res://src/game/entities/player/PlayerStateMachine.gd" type="Script" id=7]
[ext_resource path="res://src/game/entities/player/states/WalkState.gd" type="Script" id=8]
[ext_resource path="res://src/game/entities/player/states/WallSlideState.gd" type="Script" id=9]
[ext_resource path="res://assets/textures/player/player_ghost.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/player/player_ghost_body_color.png" type="Texture" id=11]
[ext_resource path="res://src/game/partials/Actionable.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 18.5 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.0
height = 12.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )
jump_speed = 350
gravity = 12

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = [ NodePath("Idle"), NodePath("Walk"), NodePath("Jump"), NodePath("Dead"), NodePath("WallSlide") ]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
state_id = "idle"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
state_id = "walk"

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
state_id = "jump"

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 1 )
state_id = "dead"

[node name="WallSlide" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
state_id = "wall_slide"

[node name="DetachTimer" type="Timer" parent="StateMachine/WallSlide"]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -18.5 )
shape = SubResource( 1 )

[node name="FloorRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="FloorRaycasts"]
cast_to = Vector2( 0, 1 )
collision_mask = 4

[node name="RayCast2D2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -6, 0 )
cast_to = Vector2( 0, 1 )
collision_mask = 4

[node name="RayCast2D3" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 5, 0 )
cast_to = Vector2( 0, 1 )
collision_mask = 4

[node name="Body" type="Node2D" parent="."]

[node name="ColorSprite" type="Sprite" parent="Body"]
position = Vector2( 0, -21 )
texture = ExtResource( 4 )

[node name="BodySprite" type="Sprite" parent="Body"]
position = Vector2( 0, -21 )
texture = ExtResource( 3 )

[node name="GhostBody" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.490196 )

[node name="ColorSprite" type="Sprite" parent="GhostBody"]
position = Vector2( 0, -21 )
texture = ExtResource( 11 )

[node name="BodySprite" type="Sprite" parent="GhostBody"]
position = Vector2( 0, -21 )
texture = ExtResource( 10 )

[node name="WallRaycast" type="Node2D" parent="."]

[node name="LeftRayCast2D" type="RayCast2D" parent="WallRaycast"]
position = Vector2( -9, -10 )
cast_to = Vector2( -3, 0 )
collision_mask = 4

[node name="RightRayCast2D" type="RayCast2D" parent="WallRaycast"]
position = Vector2( 8, -10 )
cast_to = Vector2( 3, 0 )
collision_mask = 4

[node name="RespawnActionable" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RespawnActionable"]
position = Vector2( 0, -21 )
shape = SubResource( 2 )

[node name="ActionableFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionableFinder"]
position = Vector2( -2, -20 )
shape = SubResource( 3 )

[connection signal="dead" from="." to="StateMachine" method="_on_Player_dead"]
[connection signal="nearest_actionable_changed" from="." to="." method="_on_Player_nearest_actionable_changed"]
[connection signal="timeout" from="StateMachine/WallSlide/DetachTimer" to="StateMachine/WallSlide" method="_on_DetachTimer_timeout"]
[connection signal="actioned" from="RespawnActionable" to="StateMachine/Dead" method="_on_RespawnActionable_actioned"]
